turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:68: error: expected class or object definition
state = rule(state)(x)(2) 
^Turmite:71: error: expected start of definition
	override def run() {
                 ^Turmite:103: error: Unmatched closing brace '}' ignored here
}
^